--- a/jsStudy/1.main/main.html
+++ b/jsStudy/1.main/main.html
@@ -7,8 +7,11 @@
 </head>
 <body>
 <h1>第一个练习</h1>
+<canvas id="mainCanvas"></canvas>
+
 
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.24/paper-full.min.js"></script>
 <script SRC="main.js"></script>
 </body>
 </html>
